[gd_scene load_steps=27 format=3 uid="uid://uy0a3wmk5t3s"]

[ext_resource type="Script" uid="uid://dqulvacvl3lwi" path="res://Mundo/Salas/Superficie/Sala1/superficie_sala1.gd" id="1_ck03g"]
[ext_resource type="AudioStream" uid="uid://cq18c4m3ckr37" path="res://Recursos/Music/Evening Harmony.wav" id="2_lfdby"]
[ext_resource type="Script" uid="uid://c3mqqbe5eddgd" path="res://Mundo/Salas/Superficie/Sala1/audio_stream_player.gd" id="3_six6r"]
[ext_resource type="Texture2D" uid="uid://d1bvxwfsr6uje" path="res://Recursos/Tiles/Tiles.png" id="4_rdbyc"]
[ext_resource type="Texture2D" uid="uid://bduns0b52sy07" path="res://Recursos/Tiles/Buildings.png" id="5_fjw75"]
[ext_resource type="Texture2D" uid="uid://iypwhqb3txo0" path="res://Recursos/Tiles/Props-01.png" id="6_12gqt"]
[ext_resource type="PackedScene" uid="uid://dab808f18h73l" path="res://Mapeado/Techos/Superficie/techo_esquina_con_suelo.tscn" id="8_r3gj8"]
[ext_resource type="PackedScene" uid="uid://dkf7fh0i1my0l" path="res://Mapeado/Techos/Superficie/techo1_con_suelo.tscn" id="8_thwwp"]
[ext_resource type="PackedScene" uid="uid://b06ui37g2prpg" path="res://Mapeado/Suelos/Superficie/suelo1.tscn" id="10_he078"]
[ext_resource type="PackedScene" uid="uid://b2lvd06mk0jlt" path="res://Mapeado/Suelos/Superficie/suelo2.tscn" id="11_7sypr"]
[ext_resource type="Script" uid="uid://bx21gi3wv3ulq" path="res://Mundo/Salas/Subsuelo1/Sala1/gestion_mapa_subsuelo1_sala1.gd" id="11_c2aso"]
[ext_resource type="PackedScene" uid="uid://bug433lnnx4wv" path="res://Mapeado/Plataformas/Superficie/plataforma1.tscn" id="11_c5p8b"]
[ext_resource type="PackedScene" uid="uid://4ycdndk3p276" path="res://Mapeado/Trampas/Pinchos.tscn" id="13_57y7q"]
[ext_resource type="PackedScene" uid="uid://1kl65tpgodcv" path="res://Recogibles/Cristal.tscn" id="13_gw06n"]
[ext_resource type="PackedScene" uid="uid://cr6giuf2m3w57" path="res://Mapeado/Plataformas/Superficie/plataforma_movil_y.tscn" id="13_menml"]
[ext_resource type="PackedScene" uid="uid://bg8qfqasvibpc" path="res://Mapeado/Interactuable/Cofre.tscn" id="14_splta"]
[ext_resource type="PackedScene" uid="uid://bc58het8axtq8" path="res://Enemigos/Enemigo_Lunechon/enemigo_lunechon.tscn" id="16_avgbu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gkrtp"]
texture = ExtResource("4_rdbyc")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0

[sub_resource type="TileSet" id="TileSet_o1bo0"]
sources/0 = SubResource("TileSetAtlasSource_gkrtp")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_he461"]
texture = ExtResource("5_fjw75")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
22:12/0 = 0
23:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0

[sub_resource type="TileSet" id="TileSet_snyw7"]
sources/0 = SubResource("TileSetAtlasSource_he461")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3l4mw"]
texture = ExtResource("6_12gqt")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
6:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0

[sub_resource type="TileSet" id="TileSet_h8xhc"]
sources/0 = SubResource("TileSetAtlasSource_3l4mw")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wlr5b"]
size = Vector2(128, 1536)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2aso"]
size = Vector2(128, 1536)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c5p8b"]
size = Vector2(256, 128)

[node name="Sala2" type="Node2D"]
script = ExtResource("1_ck03g")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_lfdby")
script = ExtResource("3_six6r")

[node name="Decoraciones" type="Node2D" parent="."]

[node name="Arreglos" type="Node2D" parent="Decoraciones"]

[node name="Capa1" type="TileMapLayer" parent="Decoraciones/Arreglos"]
tile_set = SubResource("TileSet_o1bo0")

[node name="Capa2" type="TileMapLayer" parent="Decoraciones/Arreglos"]
tile_set = SubResource("TileSet_snyw7")

[node name="Colisiones" type="StaticBody2D" parent="Decoraciones/Arreglos"]

[node name="Frontal" type="Node2D" parent="Decoraciones"]

[node name="TileMapLayer" type="TileMapLayer" parent="Decoraciones/Frontal"]
tile_set = SubResource("TileSet_h8xhc")

[node name="Techos" type="Node2D" parent="."]
position = Vector2(512, 1216)

[node name="Techo1ConSuelo" parent="Techos" instance=ExtResource("8_thwwp")]
position = Vector2(256, -128)

[node name="TechoEsquinaConSuelo" parent="Techos" instance=ExtResource("8_r3gj8")]
position = Vector2(-256, -128)

[node name="TechoEsquinaConSuelo2" parent="Techos" instance=ExtResource("8_r3gj8")]
position = Vector2(768, -128)
rotation = 3.14159

[node name="TechoEsquinaConSuelo3" parent="Techos" instance=ExtResource("8_r3gj8")]
position = Vector2(0, -960)

[node name="Techo1ConSuelo2" parent="Techos" instance=ExtResource("8_thwwp")]
position = Vector2(512, -960)

[node name="TechoEsquinaConSuelo4" parent="Techos" instance=ExtResource("8_r3gj8")]
position = Vector2(1536, -960)
rotation = 3.14159

[node name="Techo1ConSuelo3" parent="Techos" instance=ExtResource("8_thwwp")]
position = Vector2(1024, -960)
rotation = 3.14159
scale = Vector2(-1, 1)

[node name="Paredes" type="Node2D" parent="."]
position = Vector2(512, 1216)

[node name="Suelos" type="Node2D" parent="."]
position = Vector2(512, 1216)

[node name="Suelo1" parent="Suelos" instance=ExtResource("10_he078")]
position = Vector2(-256, 448)

[node name="Suelo2" parent="Suelos" instance=ExtResource("11_7sypr")]
position = Vector2(256, 448)

[node name="Suelo3" parent="Suelos" instance=ExtResource("10_he078")]
position = Vector2(1024, 448)

[node name="Suelo4" parent="Suelos" instance=ExtResource("11_7sypr")]
position = Vector2(1536, 448)

[node name="Plataformas" type="Node2D" parent="."]
position = Vector2(512, 1216)

[node name="PlataformaMovil" parent="Plataformas" instance=ExtResource("13_menml")]
position = Vector2(640, 640)

[node name="Terreno3" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(960, 256)

[node name="Terreno4" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(1088, 192)

[node name="Terreno5" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(1216, 128)

[node name="Terreno6" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(1344, 64)

[node name="Terreno7" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(1472, 0)

[node name="Terreno8" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(1600, -64)

[node name="Terreno10" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(1440, -160)

[node name="Terreno11" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(1376, -160)

[node name="Terreno12" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(1312, -160)

[node name="Terreno13" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(1248, -160)

[node name="Terreno14" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(1184, -160)

[node name="Terreno15" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(1120, -160)

[node name="Terreno16" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(1056, -160)

[node name="Terreno17" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(1504, -160)

[node name="Plataforma8" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(-320, -320)

[node name="Plataforma2" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(-384, -432)

[node name="Plataforma3" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(-304, -544)

[node name="Plataforma4" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(-448, -624)

[node name="Plataforma5" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(-464, -736)

[node name="Plataforma6" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(-432, -848)

[node name="Plataforma7" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(-128, -320)

[node name="Plataforma9" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(-464, -960)

[node name="Plataforma10" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(-432, -1072)

[node name="Terreno18" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(256, -720)

[node name="Terreno19" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(192, -720)

[node name="Terreno20" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(128, -720)

[node name="Terreno21" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(64, -720)

[node name="Terreno22" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(0, -720)

[node name="Terreno23" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(-64, -720)

[node name="Terreno24" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(-128, -720)

[node name="Terreno25" parent="Plataformas" instance=ExtResource("11_c5p8b")]
position = Vector2(320, -720)

[node name="Suelo2" parent="Plataformas" instance=ExtResource("11_7sypr")]
position = Vector2(240, 1440)

[node name="Suelo3" parent="Plataformas" instance=ExtResource("11_7sypr")]
position = Vector2(-256, 1440)

[node name="Suelo4" parent="Plataformas" instance=ExtResource("11_7sypr")]
position = Vector2(1248, 1440)

[node name="Suelo5" parent="Plataformas" instance=ExtResource("11_7sypr")]
position = Vector2(752, 1440)

[node name="Suelo6" parent="Plataformas" instance=ExtResource("11_7sypr")]
position = Vector2(2256, 1440)

[node name="Suelo7" parent="Plataformas" instance=ExtResource("11_7sypr")]
position = Vector2(1760, 1440)

[node name="Trampas" type="Node2D" parent="."]

[node name="Pinchos" parent="Trampas" instance=ExtResource("13_57y7q")]
position = Vector2(256, 960)
rotation = 3.14159
scale = Vector2(1, -1)

[node name="Recogibles" type="Node2D" parent="."]

[node name="Cristal" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(384, 864)

[node name="Cristal2" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(192, 864)

[node name="Cristal3" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(128, 752)

[node name="Cristal4" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(208, 640)

[node name="Cristal5" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(64, 560)

[node name="Cristal6" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(48, 448)

[node name="Cristal7" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(80, 336)

[node name="Cristal8" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(48, 224)

[node name="Cristal9" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(80, 112)

[node name="Cristal10" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(288, 96)

[node name="Cristal11" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(528, 464)

[node name="Cristal12" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(496, 464)

[node name="Cristal13" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(464, 464)

[node name="Cristal14" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(432, 464)

[node name="Cristal15" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(400, 464)

[node name="Cristal16" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(368, 464)

[node name="Cristal17" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(720, 464)

[node name="Cristal18" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(688, 464)

[node name="Cristal19" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(656, 464)

[node name="Cristal20" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(624, 464)

[node name="Cristal21" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(592, 464)

[node name="Cristal22" parent="Recogibles" instance=ExtResource("13_gw06n")]
position = Vector2(560, 464)

[node name="Cofre" parent="Recogibles" instance=ExtResource("14_splta")]
position = Vector2(825, 464)

[node name="Enemigos" type="Node2D" parent="."]

[node name="Enemigo_Lunechon" parent="Enemigos" instance=ExtResource("16_avgbu")]
position = Vector2(768, 912)

[node name="Enemigo_Lunechon2" parent="Enemigos" instance=ExtResource("16_avgbu")]
position = Vector2(752, 1488)

[node name="GestionMapa" type="Node2D" parent="."]
position = Vector2(1536, 1088)
script = ExtResource("11_c2aso")

[node name="AreaSalidaIzquierda" type="Area2D" parent="GestionMapa"]
position = Vector2(-1152, 320)
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="GestionMapa/AreaSalidaIzquierda"]
position = Vector2(0, -640)
shape = SubResource("RectangleShape2D_wlr5b")

[node name="AreaSalidaDerecha" type="Area2D" parent="GestionMapa"]
position = Vector2(704, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GestionMapa/AreaSalidaDerecha"]
position = Vector2(-320, -320)
shape = SubResource("RectangleShape2D_c2aso")

[node name="AreaSalidaInferior" type="Area2D" parent="GestionMapa"]
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="GestionMapa/AreaSalidaInferior"]
position = Vector2(-384, 512)
shape = SubResource("RectangleShape2D_c5p8b")

[node name="InicioSuperiorSala" type="Marker2D" parent="GestionMapa"]
position = Vector2(-1536, -1088)

[node name="InicioInferiorSala" type="Marker2D" parent="GestionMapa"]
position = Vector2(-1536, 704)

[node name="FinSuperiorSala" type="Marker2D" parent="GestionMapa"]
position = Vector2(768, -1088)

[node name="FinInferiorSala" type="Marker2D" parent="GestionMapa"]
position = Vector2(768, 704)

[connection signal="finished" from="AudioStreamPlayer" to="AudioStreamPlayer" method="_on_finished"]
[connection signal="body_entered" from="GestionMapa/AreaSalidaIzquierda" to="GestionMapa" method="_on_area_salida_izquierda_body_entered"]
[connection signal="body_entered" from="GestionMapa/AreaSalidaDerecha" to="GestionMapa" method="_on_area_salida_derecha_body_entered"]
[connection signal="body_entered" from="GestionMapa/AreaSalidaInferior" to="GestionMapa" method="_on_area_salida_inferior_body_entered"]
